--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_importacion.tmpl
@@ -13,11 +13,7 @@
          $("#campo2").hide();
          $("#subcampo2").hide();
 
-
-         makeToggle('configuracion_acciones','trigger',null,true);
-         makeToggle('configuracion_matcheo','trigger',null,true);
-         makeToggle('configuracion_relacion','trigger',null,true);
-         makeToggle('configuracion','trigger',null,true);
+//         makeToggle('tabbable','trigger',null,true);
 
          cargarCampoReglasMatcheo();
 
@@ -39,11 +35,17 @@ function eleccionSubCampo(){
 
 <fieldset>
 <legend class="titulo_legend_resaltado trigger click">[% 'Configuraci&oacute;n de la Importaci&oacute;n' | i18n %] ([% importacion.getNombre %])</legend>
-<div class="configuracion">
 
-    <fieldset>
-    <legend class="titulo_legend_resaltado trigger click">[% 'Configurar Acciones' | i18n %]</legend>
-    <div class="configuracion_acciones">
+<div class="tabbable">
+    <ul class="nav nav-tabs">
+    <li><a href="#1" data-toggle="tab">[% 'Acciones B&aacute;sicas' | i18n %]</a> </li>
+    <li><a  href="#2" data-toggle="tab">[% 'B&uacute;squeda de registros en el Cat&aacute;logo' | i18n %]</a></li>
+    <li><a  href="#3" data-toggle="tab">[% 'Relacion Registro/Ejemplar' | i18n %]</a></li>
+    </ul>
+    
+   <div class="tab-content">
+    <div class="tab-pane" id="1">
+		    <label>[% 'Configurar Acciones' | i18n %]</label>
      <ol>
           <li class="sub_item">
           <label>[% 'Accion si se encuentra el registro en el Cat&aacute;logo' | i18n %]</label>
@@ -77,13 +79,10 @@ function eleccionSubCampo(){
                                                                     onClick => "guardarAcciones('[% importacion.getId %]');",
                                         ) ;
             [% END %]
+
     </div>
-    </fieldset>
-
-
-    <fieldset>
-    <legend class="titulo_legend_resaltado trigger click">[% 'Configurar la b&uacute;squeda de registros en el Cat&aacute;logo' | i18n %]</legend>
-    <div class="configuracion_matcheo">
+    <div class="tab-pane" id="2">
+	<label>[% 'Configurar la b&uacute;squeda de registros en el Cat&aacute;logo' | i18n %]</label>		
        <ol>
             <li class="sub_item">
                 <label for="campo">[% 'Campo a Matchear' | i18n %]:</label>
@@ -128,12 +127,9 @@ function eleccionSubCampo(){
                                         ) ;
             [% END %]
     </div>
-    </fieldset>
-
-
-    <fieldset>
-    <legend class="titulo_legend_resaltado trigger click">[% 'Relaci&oacute;n Registro/Ejemplares' | i18n %]</legend>
-    <div class="configuracion_relacion">
+ </div>
+    <div class="tab-pane" id="3">
+	<label>[% 'Relaci&oacute;n Registro/Ejemplares' | i18n %]</label>
      <ol>
           <li class="sub_item">
           <label>[% 'Campo de Identificaci&oacute;n' | i18n %] </label>
@@ -169,8 +165,7 @@ function eleccionSubCampo(){
                                         ) ;
             [% END %]
     </div>
-    </fieldset>
-
+  </div>
 </div>
 </fieldset>
 
