--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_importaciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_importaciones.tmpl
@@ -10,70 +10,81 @@
 
 <div class="contenedor_paginador">[% paginador %]</div>
 <fieldset class="resultados_busqueda">
-    <legend class="titulo_legend trigger click">[% "Resultados de la b&uacute;squeda (Importaciones):" | i18n %]</legend>
+    <legend class="titulo_legend trigger click">[% "Resultados de la b&uacute;squeda (Importaciones)" | i18n %]</legend>
         <div class="datos_tabla_div_importacion">
-            <div class="resultados_consulta">[% "La cantidad de Importaciones es" | i18n %]: [% cantidad %]</div>
-            <div class="resultados_consulta">[% "Ha buscado por" | i18n %]: [% importacion_busqueda %]</div>
+        
+            <div class="well">
+                [% "Ha buscado por" | i18n %]: <strong>[% importacion_busqueda %]</strong></br>
             
-            [% PERL %]
-                print C4::AR::Filtros::tableHeader(   
-                                  id              => "tablaResult",
-                                  columns         => ['[% "Nombre"|i18n %]',
-													  '[% "Comentario"|i18n %]',
-													  '[% "Formato"|i18n %]',
-													  '[% "Esquema"|i18n %]',
-													  '[% "Cantidad de Registros"|i18n %]',
+            [% IF cantidad %]
+            
+                [% "La cantidad de Importaciones es" | i18n %]: <strong>[% cantidad %]</strong>
+            </div>
+            
+                [% PERL %]
+                    print C4::AR::Filtros::tableHeader(   
+                                      id              => "tablaResult",
+                                      columns         => ['[% "Nombre"|i18n %]',
+													      '[% "Comentario"|i18n %]',
+													      '[% "Formato"|i18n %]',
+													      '[% "Esquema"|i18n %]',
+													      '[% "Cantidad de Registros"|i18n %]',
 
-													  '[% "Fecha Subida"|i18n %]',
-													  '[% "Acciones"|i18n %]',
-                                                     ]
-                                        );
+													      '[% "Fecha Subida"|i18n %]',
+													      '[% "Acciones"|i18n %]',
+                                                         ]
+                                            );
+                [% END %]
+                    
+                <tbody>
+
+                [% FOREACH importacion IN resultsloop %]
+                    <tr>
+
+                          <td>
+                              [% importacion.getNombre %]
+                          </td>
+                          <td>
+                               [% importacion.getComentario %]
+                          </td>
+                          <td>
+                               [% importacion.getFormato %]
+                          </td>
+                          <td>
+                               [% importacion.getEsquema.getNombre %]
+                          </td>
+                          <td>
+                               [% importacion.getCantRegistros %]
+                          </td>
+                          <td>
+                               [% importacion.getFechaUpload_formateada %]
+                          </td>
+                          <!--  BOTONES ACCIONES (Editar, Borrar, Ver detalle) -->
+                          <td>
+					      <div>
+						          [% PERL %]
+                                   print C4::AR::Filtros::action_set_button(
+									    title           => "[% 'Importaci&oacute;n' | i18n %]",
+                                        button          => 'btn btn-primary',
+                                        url				=>	"[% url_prefix %]/herramientas/importacion/detalle_importacion.pl",
+                                        params 			=>   ["id_importacion=[% importacion.getId %]"],
+                                        actions         => [
+										    {title => "Detalle",icon=>"icon-search",url=>"[% url_prefix %]/herramientas/importacion/detalle_importacion.pl", params =>   ["id_importacion=[% importacion.getId %]"]},
+                                            {title => "Editar",icon=>"icon-pencil",url=>"[% url_prefix %]/herramientas/importacion/importarDB.pl", params =>   ["tipoAccion=EDITAR", "id_importacion=[% importacion.getId %]"]},
+                                            {title => "Borrar",action=>"borrarImportacion([% importacion.getId %]);", icon=>"icon-remove"},
+                                                           ],
+								    );
+                                  [% END %]
+					      </div>
+                          </td>
+                    </tr>
+                [% END %]
+                </tbody>
+                </table>
+            [% ELSE %]
+                </div>
+                <div class="alert alert-info">[% 'No hay importaciones para mostrar'| i18n %]</div>
             [% END %]
-                
-            <tbody>
-
-            [% FOREACH importacion IN resultsloop %]
-                <tr>
-
-                      <td>
-                          [% importacion.getNombre %]
-                      </td>
-                      <td>
-                           [% importacion.getComentario %]
-                      </td>
-                      <td>
-                           [% importacion.getFormato %]
-                      </td>
-                      <td>
-                           [% importacion.getEsquema.getNombre %]
-                      </td>
-                      <td>
-                           [% importacion.getCantRegistros %]
-                      </td>
-                      <td>
-                           [% importacion.getFechaUpload_formateada %]
-                      </td>
-                      <!--  BOTONES ACCIONES (Editar, Borrar, Ver detalle) -->
-                      <td>
-					  <div>
-						      [% PERL %]
-                               print C4::AR::Filtros::action_set_button(
-									title           => "[% 'Importaci&oacute;n' | i18n %]",
-                                    button          => 'btn btn-primary',
-                                    url				=>	"[% url_prefix %]/herramientas/importacion/detalle_importacion.pl",
-                                    params 			=>   ["id_importacion=[% importacion.getId %]"],
-                                    actions         => [
-										{title => "Detalle",icon=>"icon-search",url=>"[% url_prefix %]/herramientas/importacion/detalle_importacion.pl", params =>   ["id_importacion=[% importacion.getId %]"]},
-                                        {title => "Editar",icon=>"icon-pencil",url=>"[% url_prefix %]/herramientas/importacion/importarDB.pl", params =>   ["tipoAccion=EDITAR", "id_importacion=[% importacion.getId %]"]},
-                                        {title => "Borrar",action=>"borrarImportacion([% importacion.getId %]);", icon=>"icon-remove"},
-                                                       ],
-								);
-                              [% END %]
-					  </div>
-                      </td>
-                </tr>
-            [% END %]
-            </tbody>
-            </table>
+            
         </div>
 </fieldset>
