--- a/intranet/htdocs/intranet-tmpl/circ/detalleUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/detalleUsuario.tmpl
@@ -1,5 +1,5 @@
 <fieldset class="datos_usuario">
-<div class="form-actions"> 
+<div class="well form-actions"> 
 <legend class="titulo_legend_resaltado">[% 'Datos de Usuario' | i18n %]</legend>
       <div id="datosUsuario" style="clear:both;">
         <div class="vcard">
