--- a/intranet/htdocs/intranet-tmpl/circ/mostrarAdicional.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/mostrarAdicional.tmpl
@@ -1,6 +1,6 @@
 
 [% IF socio.tieneAutorizado %]   
-  <div class="form-actions"> 
+  <div class="well form-actions"> 
    <fieldset>
         <legend class="titulo_legend">[% "Informaci&oacute;n del usuario Adicional" | i18n %] </legend>
         <ul class="unstyled">
