--- a/intranet/htdocs/intranet-tmpl/circ/mostrarDatosEjemplar.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/mostrarDatosEjemplar.tmpl
@@ -1,6 +1,6 @@
 
     <fieldset>
-      <div class="form-actions">    
+      <div class="well form-actions">    
         <legend class="titulo_legend">[% "Informaci&oacute;n del ejemplar" | i18n %] </legend>
         <ul class="lista_datos_ejemplar unstyled">
     
