--- a/intranet/htdocs/intranet-tmpl/circ/reservas_activas_result.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/reservas_activas_result.tmpl
@@ -7,7 +7,9 @@
 <fieldset class="resultados_busqueda">
     <legend class="titulo_legend trigger click">[% "Resultados de la b&uacute;squeda" | i18n %]</legend>
         <div class="datos_tabla_div" id="datos_tabla_div">
-            <div class="resultados_consulta">[% "Total de registros" | i18n %]: [% cantidad %]</div>
+        <div class="well">
+            <div class="resultados_consulta">[% "Total de registros" | i18n %]: <strong>[% cantidad %]</strong></div>
+        </div>
             <div class="contenedor_paginador">[% paginador %]</div>
                 <table id="tablaResult" class="datos_tabla table table-striped">
                   <thead>
